# CSEntryWeb_KMP

./: .gitattributes  README.md  build.gradle.kts  fix-engine-interface.ps1  gradle.properties  gradlew  gradlew.bat  package-lock.json  package.json  server.js  settings.gradle.kts
cspro-dev/cspro/yaml-cpp/: CMakeLists.txt  yaml-cpp.vcxproj  yaml-cpp.vcxproj.filters
cspro-dev/cspro/zAction/: AccessToken.h  ActionFunctionMapping.cpp  ActionInvoker.cpp  ActionInvoker.h  CMakeLists.txt  Clipboard.cpp  Data.cpp  ExceptionWithActionName.h  Helpers.h  JsonExecutor.cpp  JsonExecutor.h  Listener.h  Message.cpp  NameProcessors.h  OnGetInputDataListener.h  Path.cpp  PortableRunnerConsole.cpp  PortableRunnerWindows.cpp  Result.h  Settings.cpp  System.cpp  WebCaller.h  WebController.h  WebListener.h  action-invoker-template.js  stdafx.h  zAction.vcxproj
cspro-dev/cspro/zAppO/: AppSyncParameters.cpp  Application.cpp  Application.h  CMakeLists.txt  CodeFile.cpp  DictionaryDescription.h  FieldStatus.h  LabelSet.cpp  LabelSet.h  Language.cpp  Language.h  LanguageSerializerHelper.h  LogicSettings.h  OccurrenceLabels.h  PFF.cpp  PFF.h  stdafx.h  zAppO.cpp  zAppO.h  zAppO.vcxproj.filters
cspro-dev/cspro/zCaseO/: BinaryCaseItem.h  CMakeLists.txt  Case.cpp  CaseBinaryDataVirtualFileMappingHandler.h  CaseConstructionHelpers.h  CaseConstructionReporter.h  CaseIO.cpp  CaseItem.h  CaseItemHelpers.h  CaseItemIndex.cpp  CaseItemJsonWriter.h  CaseLevel.cpp  CaseRecord.cpp  CaseRecord.h  CaseToHtmlConverter.cpp  CaseToHtmlConverter.h  FixedWidthNumericCaseItem.cpp  FixedWidthNumericWithStringBufferCaseItem.h  FixedWidthStringCaseItem.cpp  IPostSetValueTask.h  Note.h  NoteSorter.h  NumericCaseItem.cpp  NumericCaseItem.h  Pre74_Case.cpp  Pre74_Case.h  TextToCaseConverter.cpp  VectorClock.h  zCaseO.h  zCaseO.vcxproj.filters
cspro-dev/cspro/zDictO/: CMakeLists.txt  CaptureInfo.cpp  CaptureInfo.h  DDClass.h  Definitions.h  DictItem.h  DictNamedBase.cpp  DictNamedBase.h  DictRecord.cpp  DictValue.h  DictValuePair.cpp  DictValuePair.h  DictionaryComparer.h  DictionarySerializerHelper.h  DictionaryValidator.cpp  DictionaryValidator.h  StdAfx.h  ValueProcessor.h  ValueSetFixer.cpp  ValueSetFixer.h  ValueSetResponse.cpp  zDictO.cpp  zDictO.vcxproj.filters
cspro-dev/cspro/zEngineO/: AllSymbolDeclarations.h  ApplicationBuilder.cpp  Array.cpp  Array.h  Audio.h  BinarySymbol.cpp  BinarySymbol.h  Block.cpp  Block.h  CMakeLists.txt  Document.cpp  Document.h  EngineAccessor.h  EngineCase.cpp  EngineData.cpp  EngineDataRepository.cpp  EngineDataRepository.h  EngineDictionary.cpp  EngineDictionary.h  EngineItem.cpp  EngineItem.h  File.cpp  Flow.cpp  Image.cpp  Image.h  List.cpp  List.h  LoopStack.cpp  LoopStack.h  Map.cpp  Map.h  NamedFrequency.cpp  PenReaderApplicationLoader.cpp  PenWriterApplicationLoader.cpp  PersistentVariableProcessor.cpp  PffExecutor.cpp  PreinitializedVariable.cpp  PreinitializedVariable.h  ProcType.cpp  ProcType.h  (+19 more)
cspro-dev/cspro/zExcelO/: CMakeLists.txt  zExcelO.h  zExcelO.vcxproj.filters
cspro-dev/cspro/zExportO/: CMakeLists.txt  CSProExportWriter.cpp  EncodedTextWriter.cpp  EncodedTextWriter.h  ExcelExportWriter.cpp  ExcelExportWriter.h  ExportWriterBase.h  ReadStatExportWriterBase.h  SasExportWriter.cpp  SasExportWriter.h  SpssExportWriter.cpp  SpssExportWriter.h  StataExportWriter.cpp  stdafx.h  zExportO.vcxproj  zExportO.vcxproj.filters
cspro-dev/cspro/zJson/: CMakeLists.txt  Json.cpp  Json.h  JsonConsExceptionRethrower.h  JsonFileWriter.h  JsonFormattingOptions.cpp  JsonFormattingOptions.h  JsonNode.cpp  JsonObjectCreator.h  JsonSerializer.h  JsonSpecFile.h  JsonStreamWriter.h  JsonWriter.h  stdafx.h  zJson.h
cspro-dev/cspro/zMultimediaO/: BmpFile.h  CMakeLists.txt  Mp4Reader.cpp  QRCode.cpp  zMultimediaO.h  zMultimediaO.vcxproj
cspro-dev/cspro/zParadataO/: CMakeLists.txt  CaseEvent.cpp  CaseEvent.h  DataRepositoryEvent.cpp  DeviceStateEvent.h  Event.h  EventList.h  ExternalApplicationEvent.cpp  ExternalApplicationEvent.h  FieldEntryEvent.h  FieldInfo.h  FieldValidationEvent.cpp  GpsEvent.cpp  GpsEvent.h  GuiConcatenator.cpp  IParadataDriver.h  ImputeEvent.h  KeyingInstance.h  LanguageChangeEvent.cpp  LanguageChangeEvent.h  Log.cpp  Log.h  NamedObject.h  NoteEvent.cpp  NoteEvent.h  OperatorSelectionEvent.cpp  ParadataException.h  PropertyEvent.cpp  PropertyEvent.h  SessionEvent.cpp  SessionEvent.h  Syncer.cpp  Table.cpp  TableDefinitions.cpp  stdafx.h  zParadataO.h
cspro-dev/cspro/zReportO/: CMakeLists.txt  Pre77Report.cpp  Pre77Report.h  Pre77ReportException.h  Pre77ReportManager.cpp  Pre77ReportManager.h  stdafx.h  zReportO.vcxproj.filters
cspro-dev/cspro/zUtilF/: ApplicationShutdownRunner.h  BatchMeterDlg.cpp  BatchMeterDlg.h  CMakeLists.txt  CSButton.h  ChoiceDlg.cpp  ColorPickerComboBox.cpp  ColorPickerComboBox.h  DynamicLayoutControlResizer.h  HtmlDialogFunctionRunner.h  ImageFileDialog.cpp  ImageSelectorDlg.cpp  ImageSelectorDlg.h  ImageViewDlg.cpp  MDIFrameWndHelpers.cpp  MFCMenuBarWithoutSerializableState.h  MsgDial.cpp  MsgOpt.h  NoteEditDlg.cpp  NoteEditDlg.h  ProcessSummaryDlg.h  ProgressDlg.h  ProgressDlg2.h  ProgressDlgFactory.h  SettingsDlg.cpp  SplitterWndWithDifferingViews.h  SrtLstCt.cpp  SystemIcon.cpp  SystemIcon.h  TextInputDlg.cpp  TextReportDlg.cpp  UWM.h  zUtilF.rc  zUtilF.vcxproj  zUtilF.vcxproj.filters
wasm-engine/: CMakeLists-local.txt  CMakeLists.txt  README.md  SOURCE_VERIFICATION_REPORT.md  build-wasm.ps1  setup-sources.ps1
wasm-engine/src/: stdafx.h
wasm-engine/src/CEXEntry/: CEXENTRY.vcxproj  CEXENTRY.vcxproj.filters  Dicx.cpp  Entifaz.cpp
wasm-engine/src/CSEntry/: BinaryCommandLineInfo.h  CSEntry.h  CaseView.h  CustMsg.h  DEBaseEdit.h  DEEdit.h  DiscMDlg.h  DiscPDlg.h  IntEDlg.h  MainFrm.h  MessageOverrides.h  Opdlg.h  OperatorStatisticsLog.h  Page1.h  Page2.h  ProgressDialog.h  RunView.h  Rundoc.h  StatDlg.h  XSplWnd.h  leftprop.h
wasm-engine/src/CSView/: InputProcessor.h  MainFrame.h
wasm-engine/src/SQLite/: CMakeLists.txt  README_ENCRYPTION.md  SQLite.h  TableNamer.h  sqlite_dll.h
wasm-engine/src/WASM/: CMakeLists.txt  StdAfx.h  (+4 more)
(+4133 files in other folders)
